# mcp-todo

./: .dockerignore  .env.example  .roomodes  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_SETUP.md  Dockerfile  README.md  devcontainer.json  docker-compose.yml  package-lock.json  server.js  summary.md
.ennwise/: management_base.md
.ennwise/management_workflows/: agile_development_lifecycle_workflow.md  api_design_development_workflow.md  bug_fix_workflow.md.md  bug_triage_resolution_workflow.md  epic_decomposition_workflow.md  feature_development_plan.md  generic_workflow_template.md  hotfix_deployment_workflow.md  new_feature_development_workflow.md.md  plan_review_consolidation_workflow.md  project_planning_workflow.md  system_specification_and_design_workflow.md  technical_debt_refactoring_workflow.md  technical_improvement_workflow.md  workflow_design_guide_and_template.md
.ennwise/modes/: ArchitectMode.md  DeveloperMode.md  LeadDeveloperMode.md  QAMode.md  RustDeveloperMode.md  TechnicalWriterMode.md  code_quality_and_best_practices_review_workflow.md  (+8 more)
.roo/: mcp.json  mcp_data.json
coverage/: lcov.info
data/: alt_quotes.json  custom_quotes.txt  quotes.json
docs/: BRANCHING_STRATEGY.md  Deployment_Environment_Documentation.md  RustQuote_Service_Project_Plan_v1.md  RustQuote_Service_Project_Plan_v2.md  api_endpoints.md  openapi.yml  project_task_manager_review_report_detailed.md
scripts/: deploy.sh  view_logs.sh
src/: api_handler.rs  config_manager.rs  errors.rs  main.rs  models.rs  quote_generator.rs  responses.rs  utils.rs
tests/: integration_tests.rs
(+22 files in other folders)
